[project]
name = "nvr-assistant"
version = "0.1.0"
description = "Use an LLM to analyze camera images and send notifications to your phone via Home Assistant."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.95.1",
    "opencv-python>=4.12.0.88",
    "paho-mqtt>=2.1.0",
    "ultralytics>=8.3.163",
]
